Updated jqm script, css and images to 1.3.0 stable Fixed initial visibility of owf-admin-infobar to be sure it is hidden Fixed admin_html() seed for owf-admin-infobar display, this seed is now fixed and depends of the url, avoiding tpl_cache not to be updated when the seed was changing

--- a/var/data/admin/css/admin.css
+++ b/var/data/admin/css/admin.css
@@ -6,6 +6,7 @@
 	width: 100%;
 	height: 20px;
 	display: none;
+	visibility: hidden;
 }					
 
 /* general */
